crates/jarl-cli/tests/integration/snapshots/integration__jarl__parsing_error.snap
---
source: crates/jarl-cli/tests/integration/jarl.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 255
----- stdout -----

----- stderr -----
Error: Failed to parse test.R due to syntax errors.

----- args -----
check .
